--- a/wp-content/themes/mythememario/style.css
+++ b/wp-content/themes/mythememario/style.css
@@ -8,7 +8,7 @@ Licence: GNU
 
 
 body{
-    background-color: black;
+    background-color: rgb(131, 124, 124);
 }
 
 a,h1,h2,h3,h4,li,p,span,ul{font-family:Montserrat}
@@ -32,7 +32,9 @@ footer p{margin:0;color:#fff}
     height: 50%;
     width: 50%;
 }
-
-.icon-style{
+.lista-noticias h4{
+    font-weight:400}
     
+.lista-noticias h4 a{
+    color:#000
 }
